# parcoursup

./: .gitignore  Makefile  columns.txt  prompt.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
data/parcoursup/: columns.md
nb/: nb_parcoursup.py
parcoursup/: __init__.py  load.py  ml.py  mpi.py  processing.py
prompts/: eleves_notes.md  lycees.md  notebooks.md
tests/: draw_mpi.py  eleves.py  lycees.py  mpi.py  nb_eleves.py  nb_ml.py  nb_mpi.py
